Sonar ignore coverage of Application files. Add dummy integration test